# notes-api

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/notes/: routes.rs  structs.rs
