[package]
name = "notes-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2.6.0"
actix-cors = "0.6.4"
serde = "1.0.171"
serde_json = "1.0"
futures = "0.3.28"
env_logger = "0.10.0"
[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",
    "fast-rng",
]
